<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigate_view_sheet_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/dialog_padding_horizontal"
    android:paddingEnd="@dimen/dialog_padding_horizontal"
    android:paddingTop="@dimen/dialog_padding_vertical"
...
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                style="@style/Widget.OpenDroidPDF.Toolbar.IconButton"
                android:id="@+id/navigate_view_page_prev"
                android:padding="12dp"
                android:src="@drawable/ic_action_previous_item"
                android:contentDescription="@string/navigate_view_action_previous_page" />

            <TextView
                android:id="@+id/navigate_view_page_label"
...
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <ImageButton
                style="@style/Widget.OpenDroidPDF.Toolbar.IconButton"
                android:id="@+id/navigate_view_page_next"
                android:padding="12dp"
                android:src="@drawable/ic_action_next_item"
                android:contentDescription="@string/navigate_view_action_next_page" />
        </LinearLayout>

        <ImageView
...
        android:paddingStart="@dimen/dialog_padding_horizontal"
        android:paddingEnd="@dimen/dialog_padding_horizontal"
        android:text="@string/menu_toc"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/navigate_view_action_thumbnails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="?attr/listPreferredItemHeightSmall"
...
        android:paddingStart="@dimen/dialog_padding_horizontal"
        android:paddingEnd="@dimen/dialog_padding_horizontal"
        android:text="@string/menu_fullscreen"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <RelativeLayout
        android:id="@+id/navigate_view_row_reading_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="?attr/listPreferredItemHeightSmall"
...
