...
                android:padding="6dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_action_previous_item"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/page_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingStart="6dp"
...
            android:maxWidth="360dp"
            android:minWidth="220dp"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/page_scrubber_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_page_scrubber_tab"
        android:clickable="true"
...
