...
  <string name="toc_item_overflow">Section options</string>
  <string name="bookmark_action_rename">Rename</string>
  <string name="bookmark_action_delete">Delete</string>
  <string name="bookmark_rename_title">Rename bookmark</string>
  <string name="bookmark_rename_hint">Name</string>
  <string name="thumbnails_sheet_title">Thumbnails</string>
  <string name="thumbnail_item_content_description">Page %1$d of %2$d</string>
  <string name="navigate_view_section_navigate">Navigate</string>
  <string name="navigate_view_action_previous_page">Previous page</string>
  <string name="navigate_view_action_next_page">Next page</string>
  <string name="navigate_view_section_tools">Tools</string>
  <string name="navigate_view_section_view">View</string>
  <string name="navigate_view_label_reading_mode">Reading mode</string>
...
